# rockchipexample

./: .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
